# 3dmoo

./: .gitignore  .travis.yml  Makefile  Makefile.am  README.md  TODO  TODO.org  build.sh  configure.ac  debug.sh  firmparam  pretty.sh  run.sh  style.sh
3dspicconverter/: 3dspicconverter.sln
3dspicconverter/3dspicconverter/: 3dspicconverter.csproj  Program.cs
3dspicconverter/3dspicconverter/Properties/: AssemblyInfo.cs
docs/: archives.txt  code_style.txt  dirs.txt  srv.txt  threads.txt
inc/: 3dsx.h  DSP.h  SrvtoIO.h  archives.h  arm11.h  color.h  config.h  dirent.h  dsp.h  filemon.h  fs.h  gdbstub.h  gdbstub_internal.h  gdbstubchelper.h  gpu.h  handles.h  hid_user.h  init.h  loader.h  mem.h  nin_public_crypto.h  screen.h  service_macros.h  svc.h  threads.h  util.h
inc/IO/: IO_reg.h
inc/crypto/: bn_mul.h  padlock.h  rsa.h
inc/gdb/: gdbstub.h  gdbstub_internal.h
inc/http/: HTTPClient.h  HTTPClientAuth.h  HTTPClientCommon.h  HTTPClientString.h  HTTPClientWrapper.h
inc/polarssl/: aes.h  bignum.h  bn_mul.h  rsa.h  sha2.h
src/: color.c  config.c  config.h  filemon.c  handles.c  handles.h  loader.c  main.c  mem.c  mem.h  screen.c  svc.c  svc.h  util.c  util.h  utils.c
src/DSPemu/: DSPmain.c
src/IO/: SrvtoIO.c
src/archives/: romfs.c
src/arm11/: arm11.c  arm11.h  arm_arch_interface.h  armcopro.c  armdefs.h  armemu.c  armemu.h  arminit.c  armsupp.c  threads.c  thumbemu.c  wrap.c
src/arm11/vfp/: vfp.c  vfp.h  vfp_helper.h  vfpdouble.c  vfpdouble.h  vfpinstr.c  vfpsingle.c
src/crypto/: aes.c  sha2.c
src/dsp/: dspemu.c
src/fs/: exefs.c  extsavedata.c  fs_util.c  nandro.c  nandrw.c  romfs.c  savedata.c  sdmc.c  shared_extdata.c  sysdata.c  sysdatac.c  util.c
src/gdb/: gdb.c  gdbstub.c  gdbstubchelper.c
src/gdbstub/: gdbstub.c  gdbstub.cpp  gdbstubchelper.c
src/gpu/: clipper.c  color.c  commands.c  gpu.c  io.c  mat4.h  rasterizer.c  vec4.c  vec4.h
src/http/: HTTPClient.c  HTTPClient.h  HTTPClientAuth.c  HTTPClientAuth.h  HTTPClientString.c  HTTPClientString.h  HTTPClientWrapper.c  HTTPClientWrapper.h
src/io/: IO_wr.c
src/lib/crypto/: bignum.c  nin_public_crypt.c  rsa.c
src/lib/http/: HTTPClient.c  HTTPClientString.c
src/polarssl/: aes.c  bignum.c  nin_public_crypt.c  rsa.c  sha2.c
src/services/: PxiFS0.c  PxiPM.c  PxiPS9.c  Pxiam9.c  aci.c  am_app.c  am_sys.c  am_u.c  apt_s.c  apt_u.c  boss_p.c  boss_u.c  cam_u.c  cdc_DSP.c  cdc_csn.c  cecd_u.c  cfg_i.c  cfg_nor.c  cfg_s.c  cfg_u.c  csnd_SND.c  dsp_dsp.c  frd_a.c  frd_u.c  fs_REG.c  fs_ldr.c  fs_user.c  gsp_gpu.c  hid_SPVR.c  hid_user.c  http_c.c  i2cLCD.c  ipc_decoder.c  ir_rst.c  ir_u.c  ldr_ro.c  mcuPLS.c  mcu_GPU.c  mic_u.c  ndm_u.c  (+15 more)
src/svc/: events.c  memory.c  ports.c  syn.c
src/syscalls/: Interrupt.c  arb.c  events.c  interrupt.c  memory.c  ports.c  process.c  resource_limit.c  syn.c  timer.c
tests/: arm_instr.s  test.c
tests/armwrestler/: armwrestler.asm  make_armwrestler.bat  make_thumbwrestler.bat  thumbwrestler.asm
windows/: 3dmoo.sln  3dmoo.vcxproj  3dmoo.vcxproj.filters  Packages.dgml  floatconverter.c
windows/save/: test.txt
windows/sex/000000000B0000F000000000/: ubll.lst
windows/sex/000000000B0000FFFFFFF000000000/: ubll.lst
